--- a/info.html
+++ b/info.html
@@ -18,6 +18,9 @@
         </header>
     </head>
 <body>
+    <!-- Scroll to top button -->
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+    
 <!-- Include sections for C, JavaScript, and HTML and CSS.-->
 <section class="lovePL" id="C">
     <h2>Why I love <b id="highlight">C</b></h2>
