--- a/info.html
+++ b/info.html
@@ -24,7 +24,7 @@
     <!-- Scroll to top button -->
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <script>
-        // Get the button:
+        // Get the button
 let mybutton = document.getElementById("myBtn");
 
 // When the user scrolls down 20px from the top of the document, show the button
